--- a/bootstrap/css/style.css
+++ b/bootstrap/css/style.css
@@ -62,36 +62,34 @@ body {
   box-shadow: 0 0 3px white;
 }
 /* image gallery */
-.img-gallery{
-    border-radius:50px;
-    border: 3px solid white;
-    box-shadow: 0 0 10px black;
-    transition:all 0.5s;
-    cursor:pointer;
-    
+.img-gallery {
+  border-radius: 50px;
+  border: 3px solid white;
+  box-shadow: 0 0 10px black;
+  transition: all 0.5s;
+  cursor: pointer;
 }
-.img-gallery:hover{
-    transform:scale(1.05,1.05);
+.img-gallery:hover {
+  transform: scale(1.05, 1.05);
 }
-.btn-outline-primary{
-    border-radius: 50px;
+.btn-outline-primary {
+  border-radius: 50px;
 }
-.btn-outline-primary:hover{
-    border: 2px solid #176ebb;
-    box-shadow: 0 0 10px #176ebb;
+.btn-outline-primary:hover {
+  border: 2px solid #176ebb;
+  box-shadow: 0 0 10px #176ebb;
 }
 /* trainers section */
-.trainer-img{
-   margin-top:-50px;
-   box-shadow: 0 0 10px #176ebb;
+.trainer-img {
+  margin-top: -50px;
+  box-shadow: 0 0 10px #176ebb;
 }
-.trainer-card{
-    border-radius:10px !important;
-    transition:all 0.5s;
-
+.trainer-card {
+  border-radius: 10px !important;
+  transition: all 0.5s;
 }
-.trainer-card:hover{
-    background: linear-gradient(45deg, #0c5498, #2186db)!important;
-    color: white;
-    transform:scale(1.05,1.05);
+.trainer-card:hover {
+  background: linear-gradient(45deg, #0c5498, #2186db) !important;
+  color: white;
+  transform: scale(1.05, 1.05);
 }
